third_party/pin-4.4/bindings/python/pynbin/cymod/pinglue/pypinglue.pyx

#
# Copyright (C) 2024-2024 Intel Corporation.
# SPDX-License-Identifier: MIT
#

from libc cimport stdlib
from libc.stdint cimport uint16_t, uint32_t, int64_t, uint64_t
from libc.stddef cimport size_t
from cpython.unicode cimport PyUnicode_AsUTF8
from libc.string cimport memcpy, memset
from enum import Enum
from secrets import choice
import string

ctypedef void (*deleter_t)(void*)

cdef extern from "rscprotomsgtypes.h":
    ctypedef enum E_rpc_arg_type:
        RpcBoolean = 0
        RpcInt
        RpcUInt
        RpcChar
        RpcFloat
        RpcBuffer
        RpcOOBRef
        RpcRecord
        RpcArray
        RpcNil
        RpcVoid = RpcNil
        RpcPaddingNoEncode

    enum E_rpc_arg_flags:
        RpcArgFlagsNone = 0
        RpcArgFlagsDataEmpty = 1

    ctypedef uint32_t t_rpc_arg_schema

    cdef struct RPC_arg:
        uint64_t argData
        size_t argDataSize
        deleter_t deleter
        t_rpc_arg_schema argSchema
        E_rpc_arg_flags flags

    ctypedef RPC_arg t_rpc_arg

# Define the functions that replace the macros in "rscprotomsgtypes.h"
cdef inline t_rpc_arg_schema MAKE_ARG_SCHEMA(E_rpc_arg_type rpcType, size_t size):
    return (<uint32_t>rpcType & 0x000000FF) | ((<uint32_t>size & 0x00001FFF) << 16)

cdef inline t_rpc_arg_schema BOOL_ARG_SCHEMA():
    return MAKE_ARG_SCHEMA(RpcBoolean, 1)

cdef inline t_rpc_arg_schema INT64_ARG_SCHEMA():
    return MAKE_ARG_SCHEMA(RpcInt, sizeof(int64_t))

cdef inline t_rpc_arg_schema DOUBLE_ARG_SCHEMA():
    return MAKE_ARG_SCHEMA(RpcFloat, sizeof(double))

cdef inline t_rpc_arg_schema BUFFER_ARG_SCHEMA():
    return MAKE_ARG_SCHEMA(RpcBuffer, sizeof(uint32_t))

cdef inline t_rpc_arg_schema NIL_ARG_SCHEMA():
    return MAKE_ARG_SCHEMA(RpcNil, 0)

cdef inline E_rpc_arg_type ARG_SCHEMA_TYPE(t_rpc_arg_schema argSchema):
    return <E_rpc_arg_type>(argSchema & 0x000000FF)

cdef inline size_t ARG_SCHEMA_SIZE(argSchema):
    return <size_t>((argSchema >> 16) & 0x00000FFF)

cdef inline t_rpc_arg MAKE_RPC_ARG_EX(t_rpc_arg_schema argSchema, uint64_t argData, size_t argDataSize, E_rpc_arg_flags flags, deleter_t deleter):
    return t_rpc_arg(argData=argData, argDataSize=argDataSize, deleter=deleter, argSchema=argSchema, flags=flags)

cdef inline t_rpc_arg MAKE_RPC_ARG(t_rpc_arg_schema argSchema, uint64_t argData, size_t argDataSize, E_rpc_arg_flags flags):
    return MAKE_RPC_ARG_EX(argSchema, argData, argDataSize, flags, NULL)

cdef extern from "glue_requests.h":
    cdef struct Channel:
        pass
    ctypedef Channel t_pg_channel

    cdef struct Pinglue_service_result:
        const char* funcName
        const char* result
        size_t resultLength
        const char* name
    ctypedef Pinglue_service_result t_pg_service_result

    cdef struct Pinglue_remote_request:
        const t_rpc_arg* args
        size_t argsSize
    ctypedef Pinglue_remote_request t_pg_remote_request

    cdef struct Pinglue_remote_func:
        t_pg_remote_request request
        const char* functionName
        const char* name
    ctypedef Pinglue_remote_func t_pg_remote_func

    cdef struct Pinglue_remote_error:
        t_pg_remote_request request
        uint16_t errorId
        char* errorMessage
    ctypedef Pinglue_remote_error t_pg_remote_error

    ctypedef void (*t_pg_rpc_arg_deleter)(t_rpc_arg*, void*)
    cdef struct Pinglue_remote_response:
        t_rpc_arg ret
        t_pg_rpc_arg_deleter deleter
        void* state
        bint handled
        bint cancel
    ctypedef Pinglue_remote_response t_pg_remote_response


cdef extern from "pinglue.h":

    cdef struct Pin_glue:
        pass
    cdef struct Pin_glue_service:
        pass
    cdef struct Pin_glue_script_fragment:
        pass
    ctypedef Pin_glue t_pin_glue
    ctypedef Pin_glue_service t_pg_service
    ctypedef Pin_glue_script_fragment t_pg_script_fragment
    ctypedef void(*t_pg_remote_cb)(t_pg_remote_func*, t_pg_remote_response*)

    cdef struct Service_request:
        t_pg_channel* resultChannel 
        const char* serviceName
        const char* callbackName
        const char** knobs
        size_t knobsSize
        const t_pg_script_fragment** scripts
        size_t scriptsSize
        const char name[6]
    ctypedef Service_request t_pg_service_request

    cdef struct Args:
        size_t argc
        const char** argv
    ctypedef Args t_pg_args

    ctypedef enum E_pin_glue_ret:
        E_PG_Success = 0
        E_PG_InvalidArg
        E_PG_UnexpectedMsg
        E_PG_Internal
        E_PG_OutOfMemory
        E_PG_NoPin
        E_PG_Timeout
        E_PG_PinExit

    cdef int pinglue_open(t_pin_glue** pg, 
                          const t_pg_args* pinArgs, 
                          const t_pg_args* pgArgs, 
                          const char* program,
                          const t_pg_args* programArgs)

    cdef int pinglue_start_program(t_pin_glue* pg)

    cdef int pinglue_finish(t_pin_glue* pg, 
                            uint32_t timeoutUS) nogil

    cdef int pinglue_close(t_pin_glue* pg)

    cdef int pinglue_service_open(t_pg_service** service, 
                                  t_pin_glue* pg, 
                                  const t_pg_service_request* serviceRequest)

    cdef int pinglue_service_start(t_pg_service* service)

    cdef int pinglue_service_close(t_pg_service* service)

    cdef int pinglue_service_wait(t_pg_service* service, 
                                  uint32_t timeoutUS, 
                                  t_pg_remote_cb remoteCB,
                                  t_pg_service_result** serviceResult) nogil

    cdef int pinglue_service_result_free(t_pg_service_result* serviceResult)

    cdef int pinglue_open_channel(t_pg_channel** channel)

    cdef int pinglue_close_channel(t_pg_channel* channel)

    cdef int pinglue_channel_wait(t_pin_glue* pg, 
                                  t_pg_channel* channel, 
                                  uint32_t timeoutUS, 
                                  t_pg_remote_cb remoteCB)

    cdef t_pg_script_fragment* GLUE_register_remote_function(t_pg_channel* channel, 
                                                             const char* scriptFuncName, 
                                                             const char* remoteFuncName, 
                                                             bint noBlock)
    
    cdef t_pg_script_fragment* GLUE_server_script(const char* script, size_t scriptSize)

    cdef int pinglue_script_fragment_free(t_pg_script_fragment* fragment)

# Global variables

cdef t_rpc_arg_schema BUFFER_SCHEMA = BUFFER_ARG_SCHEMA()
cdef t_rpc_arg_schema INT_SCHEMA = INT64_ARG_SCHEMA()
cdef t_rpc_arg_schema FLOAT_SCHEMA = DOUBLE_ARG_SCHEMA()
cdef t_rpc_arg_schema BOOL_SCHEMA = BOOL_ARG_SCHEMA()
cdef t_rpc_arg_schema NIL_SCHEMA = NIL_ARG_SCHEMA()

cdef dict[str, PinGlueService] __services = {}

def _gen_random_string(size: int) -> str:
    """ Generate a random string of the given size
    Paramers:
        size (int): The size of the string. The size must be greater than 0

    Raises:
        TypeError: size is not an int
        ValueError: size <= 0

    Returns:
        str: A random string
    """
    if size is not None and not isinstance(size, int):
        raise TypeError("size must be of type int")
    elif size is None or size <= 0:
        raise ValueError("size must be > 0")

    return ''.join([choice(string.ascii_uppercase + string.digits) for _ in range(size)])


class PinGlueErrorCode(Enum):
    Success = <int>E_pin_glue_ret.E_PG_Success
    InvalidArg = <int>E_pin_glue_ret.E_PG_InvalidArg
    UnexpectedMsg = <int>E_pin_glue_ret.E_PG_UnexpectedMsg
    Internal = <int>E_pin_glue_ret.E_PG_Internal
    OutOfMemory = <int>E_pin_glue_ret.E_PG_OutOfMemory
    NoPin = <int>E_pin_glue_ret.E_PG_NoPin
    Timeout = <int>E_pin_glue_ret.E_PG_Timeout
    PinExit = <int>E_pin_glue_ret.E_PG_PinExit
    Unknown = 8


class PinGlueError(Exception):
    def __init__(self, eCode: int):
        errorMessage = ""
        try:
            cErrorCode = PinGlueErrorCode(eCode)
        except ValueError:
            cErrorCode = PinGlueErrorCode.Unknown
        if PinGlueErrorCode.Success == cErrorCode:
                errorMessage = "Success"
        elif PinGlueErrorCode.InvalidArg == cErrorCode:
                errorMessage = "Invalid Argument"
        elif PinGlueErrorCode.UnexpectedMsg == cErrorCode:
            errorMessage = "Unexpected Message"
        elif PinGlueErrorCode.Internal == cErrorCode:
            errorMessage = "Internal Error"
        elif PinGlueErrorCode.OutOfMemory == cErrorCode:
            errorMessage = "Out of Memory"
        elif PinGlueErrorCode.NoPin == cErrorCode:
            errorMessage = "Pin not found"
        elif PinGlueErrorCode.Timeout == cErrorCode:
            errorMessage = "Timeout"
        elif PinGlueErrorCode.PinExit == cErrorCode:
            errorMessage = "Pin Terminated"
        else:
            errorMessage = "Unknown Error"
        self._errorCode = cErrorCode
        super().__init__(errorMessage)
        
    def error_code(self) -> PinGlueError:
        return self._errorCode

cdef class CArgs:
    """A wrapper around the Args structure used to pass arguments to pinglue_open
       This wrapper makes sure the memory allocated for the knobs is valid for the entire
       lifetime of CArgs
    
       This wrapper will take the arguments from a list[str]
    """
    cdef t_pg_args _c_args
    cdef list _utfArgs

    def __cinit__(self, args: list[str] | None):
        self._c_args.argc = 0
        self._c_args.argv = NULL
        if args is not None:
            self._c_args.argc = len(args)
            if 0 != self._c_args.argc:
                self._utfArgs = []
                self._c_args.argv = <const char**>stdlib.malloc(self._c_args.argc*sizeof(char*))
                if not self._c_args.argv:
                    raise MemoryError()
                for ia, arg in enumerate(args):
                    uArg = arg.encode('UTF-8')
                    self._utfArgs.append(uArg)
                    self._c_args.argv[ia] = uArg

    def __dealloc__(self):
        stdlib.free(self._c_args.argv)                

    cdef t_pg_args* the_c_args(self):
        return &self._c_args

cdef class PinGlueScriptFragment:
    """Wraps a Pin glue script fragment
    """
    cdef t_pg_script_fragment* _fragment
    def __cinit__(self):
        pass

    def __init__(self):
        raise TypeError("This class cannot be instantiated directly.")
    
    def __dealloc__(self):
        if self._fragment:
            pinglue_script_fragment_free(self._fragment)
    
    @staticmethod
    cdef PinGlueScriptFragment from_ptr(t_pg_script_fragment* fragment):
        cdef PinGlueScriptFragment ret = PinGlueScriptFragment.__new__(PinGlueScriptFragment)
        ret._fragment = fragment
        return ret

cdef class PinGlueInstance:
    """Wraps a pin glue instance
    """

    cdef t_pin_glue* _pg
    cdef bint _started

    def __cinit__(self, pin_args: list[str] | None = None, glue_args: list[str] | None = None,
                 program: str | None = None, program_args: list[str] | None = None):
        """Open a Pin Glue instance

        Raises:
            TypeError
            ValueError
        """
        self._pg = NULL
        self._started = False
        if program is None or 0 == len(program):
            raise ValueError("Invalid program")

        pinArgs = CArgs(pin_args)
        glueArgs = CArgs(glue_args)
        programArgs = CArgs(program_args)

        uProgram = program.encode('UTF-8')
        cdef int eCode = pinglue_open(&self._pg, 
                                      pinArgs.the_c_args(), 
                                      glueArgs.the_c_args(), 
                                      uProgram, 
                                      programArgs.the_c_args())
        if 0 != eCode:
            raise PinGlueError(eCode)

